fixed higher_do event

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@ number of players: <span id="players"></span>
                 break;
             case 'higher_do':
                 new Howl({
-                    src: ['piano/higher_id.wav']
+                    src: ['piano/higher_do.wav']
                 }).play();
                 break;
         }
