pre-loading the audio

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
+
+    <link rel="preload" href="piano/lower_do.wav" as="audio" type="audio/wav">
+    <link rel="preload" href="piano/re.wav" as="audio" type="audio/wav">
+    <link rel="preload" href="piano/mi.wav" as="audio" type="audio/wav">
+    <link rel="preload" href="piano/fa.wav" as="audio" type="audio/wav">
+    <link rel="preload" href="piano/sol.wav" as="audio" type="audio/wav">
+    <link rel="preload" href="piano/la.wav" as="audio" type="audio/wav">
+    <link rel="preload" href="piano/si.mp3" as="audio" type="audio/mp3">
+    <link rel="preload" href="piano/higher_do.wav" as="audio" type="audio/wav">
 </head>
 <body>
 number of players: <span id="players"></span>
